# sage-patchbot

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.txt  SPKG.txt  buildbot.py  db.py  http_post_file.py  make-spkg.sh  patchbot.py  plugins.py  run_server.py  serve.py  setup.cfg  setup.py  spkg-dist  spkg-install  start  start_all.sh  start_server.py  trac.py  util.py
.github/workflows/: run_patchbot.yml  run_patchbot_cygwin.yml
sage_patchbot/: __init__.py  cached_property.py  db.py  digest_transport.py  digest_transport_py2.py  http_post_file.py  patchbot.py  plugins.py  run_server.py  serve.py  serve.wsgi  trac.py  trac_error.py  trac_ticket.py  update_version.py  util.py  version.py
sage_patchbot/server/: __main__.py  db.py  serve.py  tools.py
sage_patchbot/server/static/: default.css
sage_patchbot/server/templates/: banner.html  base.html  machines.html  plugin_template.html  ticket.html  ticket_list.html
sage_patchbot/templates/: banner.html  base.html  ticket_list.html
spkg/: SPKG.txt  make-spkg.sh
src/: cached_property.py  db.py  digest_transport.py  digest_transport_py2.py  http_post_file.py  patchbot.py  plugins.py  run_server.py  serve.py  serve.wsgi  trac.py  trac_error.py  trac_ticket.py  util.py  version.py
src/static/: default.css
src/templates/: banner.html  base.html  machines.html  ticket.html  ticket_list.html
templates/: base.html  robots.txt  ticket.html  ticket_list.html
