[metadata]
name = sage_patchbot
version = 3.0.2
author = SageMath Developers
license = GPL
description = bot for automatic test of sagemath trac tickets
keywords = sagemath
url = https://github.com/sagemath/sage-patchbot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Quality Assurance

[options]
packages = sage_patchbot, sage_patchbot.server
zip_safe = False
install_requires = pyflakes; pycodestyle
python_requires = >=3.7

[options.entry_points]
console_scripts = patchbot=sage_patchbot.patchbot:main

[options.package_data]
sage_patchbot = serve.wsgi
sage_patchbot.server =
    static/*.css
    images/*.png
    images/*.svg
    templates/*.html
    templates/*.svg
    templates/*.txt